<resources>
    <string name="app_name">Aisle</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="get_otp">Get OTP</string>
    <string name="enter_your_nphone_number">Enter your \nPhone Number</string>
    <string name="_91">+91</string>
    <string name="_continue">Continue</string>
    <string name="_upgrade">Upgrade</string>
    <string name="interested">Interested In You</string>
    <string name="premium">Premium members can\nview all their likes at once</string>
    <string name="notes">Tap to review 50+ notes</string>
</resources>