<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".module.phoneNumber.PhoneNumberFragment">


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvOtp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_60sdp"
        android:text="@string/get_otp"
        android:textColor="@color/black"
        android:textSize="@dimen/_15ssp"
        android:textStyle="bold"
        app:fontFamily="@font/gotham_rounded"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:text="@string/enter_your_nphone_number"
        android:textColor="@color/black"
        android:textSize="@dimen/_25ssp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvOtp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvPhCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/number_view"
        android:paddingLeft="@dimen/_10sdp"
        android:paddingTop="@dimen/_5sdp"
        android:paddingRight="@dimen/_10sdp"
        android:paddingBottom="@dimen/_5sdp"
        android:text="@string/_91"
        android:textColor="@color/black"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/etPhoneNumber"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNumber" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etPhoneNumber"
        android:layout_width="@dimen/_110sdp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/number_view"
        android:hint="123456789"
        android:inputType="number"
        android:maxLength="10"
        android:paddingLeft="@dimen/_10sdp"
        android:paddingTop="@dimen/_5sdp"
        android:paddingRight="@dimen/_10sdp"
        android:paddingBottom="@dimen/_5sdp"
        android:textColor="@color/black"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/tvPhCode"
        app:layout_constraintTop_toBottomOf="@+id/tvNumber" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnContinuePhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/btn_continue"
        android:paddingStart="@dimen/_20sdp"
        android:paddingTop="@dimen/_5sdp"
        android:paddingEnd="@dimen/_20sdp"
        android:paddingBottom="@dimen/_5sdp"
        android:text="@string/_continue"
        android:textAllCaps="false"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPhCode" />
</androidx.constraintlayout.widget.ConstraintLayout>